--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 21
+    buildToolsVersion '21.1.2'
     defaultConfig {
-        applicationId "net.ossrs.androidpublisher"
+        applicationId 'net.ossrs.sea'
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
